# misspy-rewrite

./: README.md  creatednote.json  poetry.lock.json  pyproject.toml  sub.py
.github/workflows/: upload.yml
example/: listen_timeline.py
misspy/: Bot.py  __init__.py  settings.py
misspy/core/: exception.py  http.py  websocket.py
misspy/core/experimental/: aiows.py
misspy/core/models/: federation.py  internal.py  note.py  notifications.py  users.py
misspy/core/types/: action.py  drive.py  favorites.py  federation.py  following.py  gallery.py  internal.py  mute.py  note.py  other.py  poll.py  user.py  users.py
misspy/endpoints/: drive.py  i.py  notes.py
test/: apitest.py
