[tool.poetry]
name = "misspy"
version = "2024.1.0"
description = "Fast, asynchronous misskey API framework"
authors = ["sonyakun <owner@sonyakun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
